RE #81: - Removed fix for href wrapping button, added text-decoration-none class to be added to RouterLink - Updated List Group to utilize action prop to add hover to items - Fixed List Group Nav so that it used the correct styles with action prop - Added icon-hover-bg class and showed examples

--- a/src/components/app/_master.scss
+++ b/src/components/app/_master.scss
@@ -73,6 +73,10 @@ a:focus {
   text-decoration: underline;
 }
 
+.text-decoration-none {
+  text-decoration: none !important;
+}
+
 button,
 input,
 optgroup,
